--- a/main.ui
+++ b/main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1096</width>
-    <height>761</height>
+    <height>755</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -68,19 +68,19 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>160</y>
+      <y>150</y>
       <width>241</width>
-      <height>71</height>
+      <height>90</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="registrationGrid">
      <item row="2" column="1">
-      <widget class="QPushButton" name="registerButton">
+      <widget class="QPushButton" name="rigidRegistrationButton">
        <property name="enabled">
         <bool>true</bool>
        </property>
        <property name="text">
-        <string>Register</string>
+        <string>Rigid Registration</string>
        </property>
       </widget>
      </item>
@@ -95,6 +95,13 @@
        </property>
        <property name="text">
         <string>Registration</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QPushButton" name="articulatedRegistrationButton">
+       <property name="text">
+        <string>Articulated Registration</string>
        </property>
       </widget>
      </item>
