--- a/main.ui
+++ b/main.ui
@@ -28,13 +28,10 @@
       </property>
       <item>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="1" column="0">
-         <widget class="QPushButton" name="loadMRIButton">
-          <property name="enabled">
-           <bool>true</bool>
-          </property>
+        <item row="4" column="0">
+         <widget class="QPushButton" name="loadXRayButton">
           <property name="text">
-           <string>Load MRI</string>
+           <string>Load X-Ray</string>
           </property>
          </widget>
         </item>
@@ -52,7 +49,7 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="0">
+        <item row="5" column="0">
          <widget class="QPushButton" name="loadSTButton">
           <property name="text">
            <string>Load Surface Topology</string>
@@ -60,13 +57,6 @@
          </widget>
         </item>
         <item row="3" column="0">
-         <widget class="QPushButton" name="loadXRayButton">
-          <property name="text">
-           <string>Load X-Ray</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
          <widget class="QLabel" name="label">
           <property name="font">
            <font>
@@ -78,6 +68,27 @@
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; font-style:normal;&quot;&gt;TextLabel&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
+        </item>
+        <item row="2" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <widget class="QPushButton" name="loadMRIButton">
+            <property name="enabled">
+             <bool>true</bool>
+            </property>
+            <property name="text">
+             <string>Load MRI</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="pushButton">
+            <property name="text">
+             <string>PushButton</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </item>
